--- a/Propaganda/html/phoneMoneyManage.html
+++ b/Propaganda/html/phoneMoneyManage.html
@@ -16,7 +16,7 @@
     </header>
     <div class="con">
         <div class="con_user">
-            <p class="user_name">107156994@qq.com</p>
+            <p class="user_name"></p>
         </div>
         <div class="asset_message">
             <div class="asset_message_left">
