--- a/Propaganda/html/moneyManage.html
+++ b/Propaganda/html/moneyManage.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/moneyManage.css">
     <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/jquery.cookie.js"></script>
     <script src="../js/moneyManage.js"></script>
     <title>财务管理</title>
 </head>
@@ -61,7 +62,7 @@
                             <li><a href="#">API设置</a></li>
                         </ul>
                     </li>
-                    <li class="login"><a href="../html/login.html"></a></li>
+                    <li class="login"><a href="../index.html"></a></li>
                 </ul>
             </div>
         </div>          
