--- a/Propaganda/html/phoneLogin.html
+++ b/Propaganda/html/phoneLogin.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/phoneLogin.css">
     <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/jquery.cookie.js"></script>
     <script src="../js/phoneLogin.js"></script>
     <title>登录</title>
 </head>
