--- a/Propaganda/html/phoneReg.html
+++ b/Propaganda/html/phoneReg.html
@@ -19,13 +19,13 @@
                     </ul>
                     <ul class="tab_bd">
                         <li class="thisclass"><span>手机号</span><span class="error">手机号不正确</span><input id="phone" type="text" placeholder="请输入手机号"></li>
-                        <li><span>邮箱号</span><input id="email" type="text" placeholder="请输入邮箱地址"></li>
+                        <li class="ensureEmail"><span>邮箱号</span><span class="error">邮箱地址不正确</span><input id="email" type="text" placeholder="请输入邮箱地址"></li>
                     </ul>
                     <p><span>登录密码</span><input id="password" type="password" placeholder="请输入密码"></p>
                     <p class="ensurePassword"><span>确认密码</span><span class="error">密码不一致</span><input id="againPassword" type="password" placeholder="请再次输入密码"></p>
-                    <p class="yzm"><span>图形验证码</span><input type="text"><img src="" alt=""></p>
-                    <p class="ty"><input type="checkbox" name="" id=""><span>我已阅读并同意</span><a href="#">《区块链公社条约》</a></p>
-                    <button id="submit"  type="submit">注册</button>
+                    <p class="yzm"><span>图形验证码</span><input id="#yzm" type="text"><img id='img_captcha' src="" alt=""></p>
+                    <p class="ty"><input type="checkbox" name="" id="agree"><span>我已阅读并同意</span><a href="#">《区块链公社条约》</a></p>
+                    <button id="submit" type="submit">注册</button>
                 </div>
             </div>
             <div class="con_login">
