--- a/Propaganda/index.html
+++ b/Propaganda/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery.cookie.js"></script>
     <script src="js/index.js"></script>
     <title>区块链宣传</title>
 </head>
@@ -22,7 +23,7 @@
             <ul>
                 <li><a href="./html/moneyManage.html">财务</a></li>
                 <li><span class="user_pic"></span>名字七个中文字</li>
-                <li class="login"><a href="../html/login.html"></a></li>
+                <li class="login"><a href="#"></a></li>
             </ul>
         </div>
 
@@ -82,11 +83,11 @@
             </ul>
             <ul class="tab_bd">
                 <li class="thisclass"><span>手机号</span><span class="error">手机号不正确</span><input id="phone" type="text" placeholder="请输入手机号"></li>
-                <li><span>邮箱号</span><span class="error">邮箱地址不正确</span><input id="email" type="text" placeholder="请输入邮箱地址"></li>
+                <li class="ensureEmail"><span>邮箱号</span><span class="error">邮箱地址不正确</span><input id="email" type="text" placeholder="请输入邮箱地址"></li>
             </ul>
             <p><span>登录密码</span><input id="password" type="password" placeholder="请输入密码"></p>
             <p class="ensurePassword"><span>确认密码</span><span class="error">密码不一致</span><input id="againPassword" type="password" placeholder="请再次输入密码"></p>
-            <p class="yzm"><span>图形验证码</span><input type="text"><img alt="" class="img_code" id="img_captcha" :src="'data:image/png; base64,'+data" data-get-img-code="1"></p>
+            <p class="yzm"><span>图形验证码</span><input id="yzm" type="text"><img alt='' class='img_code' id='img_captcha'></p>
             <p class="ty"><input type="checkbox" name="" id="agree"><span>我已阅读并同意</span><a href="#">《区块链公社条约》</a></p>
             <button id="submit"  type="submit">注册</button>
         </div>
