--- a/Propaganda/html/PhoneVerification.html
+++ b/Propaganda/html/PhoneVerification.html
@@ -14,12 +14,12 @@
     <div class="con_reg">
         <div class="tab">
             <ul class="tab_hd">
-                <li class="active">手机注册</li>
+                <li>手机注册</li>
                 <li>邮箱注册</li>
             </ul>
             <ul class="tab_bd">
-                <li class="thisclass"><span>已发送验证码至手机号185****1232请填写验证码</span><span class="error">验证码不正确</span><input id="phone" type="text" placeholder="请输入验证码"></li>
-                <li><span>已发送验证码至邮箱号2991****69@qq.com请填写验证码</span><span class="error">验证码不正确</span><input id="email" type="text" placeholder="请输入验证码"></li>
+                <li><span>已发送验证码至手机号<i class="user_name_phone"></i>请填写验证码</span><span class="error">验证码不正确</span><input id="phone" type="text" placeholder="请输入手机验证码"></li>
+                <li><span>已发送验证码至邮箱号<i class="user_name_email"></i>请填写验证码</span><span class="error">验证码不正确</span><input id="email" type="text" placeholder="请输入邮箱验证码"></li>
             </ul>
             <button id="submit" type="submit">提交</button>
         </div>
