--- a/Propaganda/html/moneyManage.html
+++ b/Propaganda/html/moneyManage.html
@@ -52,16 +52,7 @@
                 <ul>
                     <li><a href="#">订单</a><span></span></li>
                     <li><a href="#">财务</a></li>
-                    <li><span class="user_pic"></span>名字七个中文字<span class="arrow_up"></span>
-                        <span class="arrow"></span>
-                        <ul>
-                            <li><a href="./safeSetting.html">安全设置</a></li>
-                            <li><a href="./nameValidate.html">实名认证</a></li>
-                            <li><a href="#">我的押金</a></li>
-                            <li><a href="#">我的广告</a></li>
-                            <li><a href="#">API设置</a></li>
-                        </ul>
-                    </li>
+                    
                     <li class="login"><a href="../index.html"></a></li>
                 </ul>
             </div>
@@ -82,7 +73,7 @@
         <div class="con_score">
                 <h4><span>积分信息</span></h4>
                 <div class="con_score_left">
-                    <p>积分<b>1000</b></p>
+                    <p>积分<b id="score"></b></p>
                 </div>
                 <div class="con_score_right">
                     <a href="#">兑换</a>
