--- a/Propaganda/html/phoneReg.html
+++ b/Propaganda/html/phoneReg.html
@@ -23,7 +23,7 @@
                     </ul>
                     <p><span>登录密码</span><input id="password" type="password" placeholder="请输入密码"></p>
                     <p class="ensurePassword"><span>确认密码</span><span class="error">密码不一致</span><input id="againPassword" type="password" placeholder="请再次输入密码"></p>
-                    <p class="yzm"><span>图形验证码</span><input id="#yzm" type="text"><img id='img_captcha' src="" alt=""></p>
+                    <p class="yzm"><span>图形验证码</span><input id="yzm" type="text"><img id='img_captcha' src="" alt=""></p>
                     <p class="ty"><input type="checkbox" name="" id="agree"><span>我已阅读并同意</span><a href="#">《区块链公社条约》</a></p>
                     <button id="submit" type="submit">注册</button>
                 </div>
