--- a/Propaganda/html/phoneRegSuccess.html
+++ b/Propaganda/html/phoneRegSuccess.html
@@ -22,7 +22,7 @@
                 <p>4、平台理论:公平公正、互利多赢。</p>
             </div>
             <div class="regSuccess_message">
-                <a href="../html/phoneMoneyManage.html">查看账户</a>
+                <a href="#">查看账户</a>
             </div> 
     </div>
 </body>
