--- a/Propaganda/index.html
+++ b/Propaganda/index.html
@@ -89,19 +89,19 @@
             <p class="ensurePassword"><span>确认密码</span><span class="error">密码不一致</span><input id="againPassword" type="password" placeholder="请再次输入密码"></p>
             <p class="yzm"><span>图形验证码</span><input id="yzm" type="text"><img alt='' class='img_code' id='img_captcha'></p>
             <p class="ty"><input type="checkbox" name="" id="agree"><span>我已阅读并同意</span><a href="#">《区块链公社条约》</a></p>
-            <button id="submit"  type="submit">注册</button>
+            <button id="regSubmit"  type="submit">注册</button>
         </div>
     </div>
     <div class="getyzm">
-            <div class="tab">
+            <div class="tab2">
                 <ul class="tab_hd2">
-                    <li data-id="1" class="active tab_register">手机注册</li>
+                    <li data-id="1" class="tab_register">手机注册</li>
                     <li data-id="0" class="tab_register">邮箱注册</li>
                     <li class="close"></li>
                 </ul>
                 <ul class="tab_bd2">
-                    <li class="thisclass"><span>已发送验证码至手机号185****1232请填写验证码</span><span class="error">验证码不正确</span><input id="phone" type="text" placeholder="请输入验证码"></li>
-                    <li><span>已发送验证码至邮箱号2991****69@qq.com请填写验证码</span><span class="error">验证码不正确</span><input id="email" type="text" placeholder="请输入验证码"></li>
+                    <li><span>已发送验证码至手机号<i class="user_name_phone"></i>请填写验证码</span><span class="error">验证码不正确</span><input id="phone" type="text" placeholder="请输入验证码"></li>
+                    <li><span>已发送验证码至邮箱号<i class="user_name_email"></i>请填写验证码</span><span class="error">验证码不正确</span><input id="email" type="text" placeholder="请输入验证码"></li>
                 </ul>
                 <button id="getyzm_submit"  type="submit">提交</button>
             </div>
